Fill out skeleton html

--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,12 @@ div {
 
 .row {
   display: flex;
+  flex-direction: row;
+  width: 100%;
 }
 
 .column {
   display: flex;
   flex-direction: column;
+  flex-basis: 100%;
 }
