--- a/styles.css
+++ b/styles.css
@@ -352,7 +352,8 @@ template {
 /* My CSS starts here, above CSS is normalise.css */
 
 :root {
-  --margin: 60px;
+  --left-right-margin: 60px;
+  --top-bottom-padding: 100px;
 }
 
 * {
@@ -384,33 +385,37 @@ input {
 } */
 
 .column > * {
-  padding: 0px var(--margin);
+  padding-left: var(--left-right-margin);
+  padding-right: var(--left-right-margin);
 }
 
 .column {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 100vh;
+  height: calc(100vh - var(--top-bottom-padding)*2);
   width: 50%;
   border: black solid 2px;
-  /* padding: 0px 20px; */
+  padding: var(--top-bottom-padding) 0px;
 }
 
 .form-row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin: 24px 0px;
+  margin: 12px 0px;
 }
 
 .form-item {
   display: flex;
   flex-direction: column;
-  margin-right: calc(var(--margin)*1.25);
+  margin-right: calc(var(--left-right-margin)*1.25);
+  padding: 6px 0px;
 }
 
-form {
+.right > form {
+  padding-top: 20px;
+  padding-bottom: 20px;
   box-shadow: 0px 6px 8px grey;
 }
 
@@ -418,4 +423,6 @@ button {
   background-color: rgb(89, 109, 72);
   color: white;
   border-radius: 8px;
+  width: 200px;
+  font-size: 24px;
 }
