--- a/styles.css
+++ b/styles.css
@@ -357,6 +357,17 @@ template {
   --individual-top-bottom-margin: 32px;
 }
 
+@font-face {
+  font-family: Norse-Bold;
+  src: url(assets/Norse-Bold.otf);
+}
+
+.logo {
+  font-family: Norse-Bold;
+  font-size: 120px;
+  font-weight: bold;
+}
+
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
