--- a/styles.css
+++ b/styles.css
@@ -392,7 +392,7 @@ template {
 
 div {
   color: black;
-  font-size: 40px;
+  font-size: 32px;
 }
 
 label {
@@ -463,9 +463,10 @@ input {
   padding-top: 20px;
   padding-bottom: 20px;
   box-shadow: 0px 6px 8px grey;
+  font-size: 24px;
 }
 
-button {
+.submit-button {
   background-color: rgb(89, 109, 72);
   color: white;
   border-radius: 8px;
