--- a/styles.css
+++ b/styles.css
@@ -429,7 +429,7 @@ input {
 .left {
   background-image: url(assets/halie-west-25xggax4bSA-unsplash.jpg);
   width: 33%;
-  background-size: 110%;
+  background-size: 100% 100%;
 }
 
 .column {
